[package]
name = "tms"
version = "0.1.0"
authors = ["Peter Willumsen"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Tmux-sessionizer"
repository = "https://github.com/Pwillumsen/tms/"
keywords = ["tmux", "terminal"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
clap_complete = "4.0.3"
color-eyre = {version = "0.6.2", default-features = false}
confy = "0.5.1"
git2 = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
skim = "0.9.4"
tmux_interface = {version = "0.2.1", features = ["tmux_2_8"]}
